--- a/index.html
+++ b/index.html
@@ -2,70 +2,105 @@
 layout: default
 title: Allure self-documented tests
 ---
-<div class="row">
-    <div class="col-md-9">
-        <div class="fotorama slides" data-ratio="800/600" data-width="100%">
-            <div><img src="img/2013_11_28_28112013_800_600.jpg"></div>
-            <div><img src="img/2013_11_30_30112013_800_600.jpg"></div>
-            <div><img src="img/2013_12_02_02122013_800_600.jpg"></div>
-            <div><img src="img/2013_12_03_03122013_800_600.jpg"></div>
-            <div><img src="img/2013_12_04_04122013_800_600.jpg"></div>
-            <div><img src="img/2013_12_05_05122013_800_600.jpg"></div>
+<div class="presentation">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9">
+                <div class="fotorama slides" data-ratio="800/600" data-width="100%" data-autoplay="true">
+                    <div class="slide">
+                        <img class="slide__image" src="img/slides/slide1.png">
+                        <div class="slide__description">
+                            <h2 class="slide__title">The most complete reports</h2>
+                            <div class="slide__text">All information about tests before your eyes</div>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img class="slide__image" src="img/slides/slide2.png">
+                        <div class="slide__description slide__description_right">
+                            <h2 class="slide__title">Easy to use</h2>
+                            <div class="slide__text">Just include our adapter and get a nice report about your tests</div>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img class="slide__image" src="img/slides/slide3.png">
+                        <div class="slide__description slide__description_right">
+                            <h2 class="slide__title">Detailed explanation</h2>
+                            <div class="slide__text">We can provide maximum amount of information during the test</div>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img class="slide__image" src="img/slides/slide4.png">
+                        <div class="slide__description">
+                            <h2 class="slide__title">Report as much as you wish</h2>
+                            <div class="slide__text">Save screenshots, dumps, logs and other data as attachment for test</div>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img class="slide__image" src="img/slides/slide5.png">
+                        <div class="slide__description">
+                            <h2 class="slide__title">Analyze results</h2>
+                            <div class="slide__text">We provide many statistics and build charts with test results distribution and timings of test run</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 informers">
+                <h4>Versions</h4>
+
+                <p><b>Stable:</b> 1.2.2</p>
+
+                <p><b>Development:</b> 1.2.3-SNAPSHOT</p>
+                <hr>
+                <p>
+                    <a class="btn-group"
+                       href="http://teamcity.qatools.ru/guestAuth/app/rest/builds/buildType:allure_core_development_deploy/">
+                        <span class="btn btn-default">Build Status</span>
+                        <span class="btn btn-success count">PASSED</span>
+                    </a>
+                </p>
+
+                <p>
+                    <span class="btn-group">
+                        <a href="https://github.com/allure-framework/allure-core" class="btn btn-default">GitHub</a>
+                        <span class="btn btn-default count">42</span>
+                    </span>
+                </p>
+
+                <p>
+                    <span class="btn-group">
+                        <a href="https://twitter.com/AllureFw" class="btn btn-primary">Tweet</a>
+                        <span class="btn btn-default count">42</span>
+                    </span>
+                </p>
+            </div>
         </div>
     </div>
-    <div class="col-md-3 informers">
-        <h4>Versions</h4>
-
-        <p><b>Stable:</b> 1.2.2</p>
-
-        <p><b>Development:</b> 1.2.3-SNAPSHOT</p>
-        <hr>
-        <p>
-            <a class="btn-group"
-               href="http://teamcity.qatools.ru/guestAuth/app/rest/builds/buildType:allure_core_development_deploy/">
-                <span class="btn btn-default">Build Status</span>
-                <span class="btn btn-success count">PASSED</span>
-            </a>
-        </p>
-
-        <p>
-            <span class="btn-group">
-                <a href="https://github.com/allure-framework/allure-core" class="btn btn-default">GitHub</a>
-                <span class="btn btn-default count">42</span>
-            </span>
-        </p>
-
-        <p>
-            <span class="btn-group">
-                <a href="https://twitter.com/AllureFw" class="btn btn-primary">Tweet</a>
-                <span class="btn btn-default count">42</span>
-            </span>
-        </p>
-    </div>
 </div>
-<h1>Allure &mdash; self-documented tests</h1>
-<h2>We made auto-test reports human-understandable</h2>
-<p>We proudly present new framework for self-documenting test creation. Welcome to Allure!</p>
-<p>80 days around the world, we'll find a pot of gold just sitting where the rainbow's ending. Time - we'll fight
-    against the time, and we'll fly on the white wings of the wind. 80 days around the world, no we won't say a word
-    before the ship is really back. Round, round, all around the world. Round, all around the world. Round, all around
-    the world. Round, all around the world.</p>
+<div class="text container">
+    <h1 class="page-header text-center">Allure &mdash; self-documented tests</h1>
+    <h2>We made auto-test reports human-understandable</h2>
+    <p>We proudly present new framework for self-documenting test creation. Welcome to Allure!</p>
+    <p>80 days around the world, we'll find a pot of gold just sitting where the rainbow's ending. Time - we'll fight
+        against the time, and we'll fly on the white wings of the wind. 80 days around the world, no we won't say a word
+        before the ship is really back. Round, round, all around the world. Round, all around the world. Round, all around
+        the world. Round, all around the world.</p>
 
-<p>I never spend much time in school but I taught ladies plenty. It's true I hire my body out for pay, hey hey. I've
-    gotten burned over Cheryl Tiegs, blown up for Raquel Welch. But when I end up in the hay it's only hay, hey hey. I
-    might jump an open drawbridge, or Tarzan from a vine. 'Cause I'm the unknown stuntman that makes Eastwood look so
-    fine.</p>
+    <p>I never spend much time in school but I taught ladies plenty. It's true I hire my body out for pay, hey hey. I've
+        gotten burned over Cheryl Tiegs, blown up for Raquel Welch. But when I end up in the hay it's only hay, hey hey. I
+        might jump an open drawbridge, or Tarzan from a vine. 'Cause I'm the unknown stuntman that makes Eastwood look so
+        fine.</p>
 
-<h2>How we do it?</h2>
+    <h2>How we do it?</h2>
 
-<p>Top Cat! The most effectual Top Cat! Who's intellectual close friends get to call him T.C., providing it's with
-    dignity. Top Cat! The indisputable leader of the gang. He's the boss, he's a pip, he's the championship. He's the
-    most tip top, Top Cat.</p>
-<p>One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for
-    all and all for one, it's a pretty story. Sharing everything with fun, that's the way to be. One for all and all for
-    one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one, can
-    sound pretty corny. If you've got a problem chum, think how it could be.</p>
-<p>Just the good ol' boys, never meanin' no harm. Beats all you've ever saw, been in trouble with the law since the day
-    they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never
-    will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good
-    ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p>
+    <p>Top Cat! The most effectual Top Cat! Who's intellectual close friends get to call him T.C., providing it's with
+        dignity. Top Cat! The indisputable leader of the gang. He's the boss, he's a pip, he's the championship. He's the
+        most tip top, Top Cat.</p>
+    <p>One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for
+        all and all for one, it's a pretty story. Sharing everything with fun, that's the way to be. One for all and all for
+        one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one, can
+        sound pretty corny. If you've got a problem chum, think how it could be.</p>
+    <p>Just the good ol' boys, never meanin' no harm. Beats all you've ever saw, been in trouble with the law since the day
+        they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never
+        will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good
+        ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p>
+</div>
