add counters and build status

--- a/index.html
+++ b/index.html
@@ -51,27 +51,21 @@ title: Allure self-documented tests
 
                 <p><b>Development:</b> 1.2.3-SNAPSHOT</p>
                 <hr>
-                <p>
-                    <a class="btn-group"
-                       href="http://teamcity.qatools.ru/guestAuth/app/rest/builds/buildType:allure_core_development_deploy/">
-                        <span class="btn btn-default">Build Status</span>
-                        <span class="btn btn-success count">PASSED</span>
+                <div class="informers__line">
+                    <a class="btn-group teamcity"
+                       href="http://teamcity.qatools.ru/">
+                        <span class="btn btn-default teamcity__label">Build Status</span>
+                        <span class="btn btn-default teamcity__count">UNKNOWN</span>
                     </a>
-                </p>
+                </div>
 
-                <p>
-                    <span class="btn-group">
-                        <a href="https://github.com/allure-framework/allure-core" class="btn btn-default">GitHub</a>
-                        <span class="btn btn-default count">42</span>
-                    </span>
-                </p>
-
-                <p>
-                    <span class="btn-group">
-                        <a href="https://twitter.com/AllureFw" class="btn btn-primary">Tweet</a>
-                        <span class="btn btn-default count">42</span>
-                    </span>
-                </p>
+                <div class="informers__line">
+                    <iframe src="http://ghbtns.com/github-btn.html?user=allure-framework&repo=allure-core&type=watch&count=true&size=large"
+                            allowtransparency="true" frameborder="0" scrolling="0"></iframe></div>
+                <div class="informers__line">
+                    <a href="https://twitter.com/AllureFw" class="twitter-follow-button" data-show-count="true" data-size="large" data-show-screen-name="false">Follow</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                </div>
             </div>
         </div>
     </div>
@@ -104,3 +98,4 @@ title: Allure self-documented tests
         will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good
         ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p>
 </div>
+<script src="{{site.baseurl}}/js/index.js"></script>
