--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ title: Allure self-documented tests
             <div class="col-md-3 informers">
                 <h4>Versions</h4>
 
-                <p><b>Stable:</b> 1.2.2</p>
+                <p><b>Stable:</b> 1.2.4</p>
 
-                <p><b>Development:</b> 1.2.3-SNAPSHOT</p>
+                <p><b>Development:</b> 1.3.0.RC1</p>
                 <hr>
                 <div class="informers__line">
                     <a class="btn-group teamcity"
