fix text on narrow screens, brought new header from allure-core

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </ul>
     <section class="tab-content">
         <div class="b-island tab-content-fill">
-            <div class="text container">
+            <div class="text">
                 <div class="page-header">
                     <h1 class="allure-title text-center">Allure Test Report</h1>
                     <p class="allure-description text-justify">
