--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
-    <meta http-equiv="refresh" content="0;url=index.html" />
+    <meta http-equiv="refresh" content="0;url=/" />
     <title>Allure | Page not found</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
