Added link to StackOverflow

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
             </a>
         </li>
         <li class="b-vert__item">
+            <a href="http://stackoverflow.com/questions/tagged/allure" class="b-vert__title">
+                <div class="b-vert__icon octicon octicon-question"></div>
+                Ask Question
+            </a>
+        </li>
+        <li class="b-vert__item">
             <a class="b-vert__title" href="https://github.com/allure-framework/allure-core">
                 <div class="b-vert__icon octicon octicon-mark-github"></div>
                 Source Code
