Fixed Yandex team name

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p class="allure-description text-justify">
                         There are lots of cool testing frameworks for different programming languages. Unfortunately only
                         few of them can provide good representation of test execution output.
-                        <a href="http://company.yandex.com/">Yandex team</a> is working on
+                        <a href="http://company.yandex.com/">Yandex</a> testing team is working on
                         <a href="https://github.com/allure-framework/allure-core">Allure</a> - an open-source
                         framework designed to create test execution reports clear to everyone in the team.
                     </p>
