--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </li>
         <li class="b-vert__item">
-            <a class="b-vert__title" href="http://teamcity.qatools.ru/repository/download/allure_core_master_release/lastSuccessful/index.html?guest=1">
+            <a class="b-vert__title" href="http://ci.qatools.ru/job/allure-core_master-deploy/lastSuccessfulBuild/artifact/allure-report-preview/target/allure-report/index.html">
                 <div class="b-vert__icon octicon octicon-file-code"></div>
                 Demo Report
             </a>
