--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </li>
         <li class="b-vert__item">
-            <a class="b-vert__title" href="http://ci.qatools.ru/job/allure-core_master-deploy/lastSuccessfulBuild/artifact/allure-report-preview/target/allure-report/index.html">
+            <a class="b-vert__title" href="http://ci.qatools.ru/job/allure-core_master-deploy/lastSuccessfulBuild/Allure_report/">
                 <div class="b-vert__icon octicon octicon-file-code"></div>
                 Demo Report
             </a>
