Some English grammar and typo corrections
"Standart" != "Standard".... sorry my OCD brain just flipped out and I have to submit a PR to correct it. Hope this helps

--- a/index.html
+++ b/index.html
@@ -109,39 +109,39 @@
                     <h1 class="allure-title text-center">Allure Test Report</h1>
                     <p class="allure-description text-justify">
                         There are lots of cool testing frameworks for different programming languages. Unfortunately only
-                        few of them can provide good representation of test execution output.
-                        <a href="http://company.yandex.com/">Yandex</a> testing team is working on
+                        a few of them can provide good representation of test execution output.
+                        The <a href="http://company.yandex.com/">Yandex</a> testing team is working on
                         <a href="https://github.com/allure-framework/allure-core">Allure</a> - an open-source
-                        framework designed to create test execution reports clear to everyone in the team.
+                        framework designed to create test execution reports that are clear to everyone in the team.
                     </p>
                 </div>
 
                 <h2>How it works</h2>
 
-                <p>Allure is based on standart xUnit results output but adds some supplementary data. Any report is
-                    generated in two steps. During <strong>test execution</strong> (first step) a small library called
+                <p>Allure is based on standard xUnit results output but adds some supplementary data. Any report is
+                    generated in two steps. During <strong>test execution</strong> (first step), a small library called
                     <strong>adapter</strong>
-                    attached to testing framework saves information about executed tests to XML files. We already
+                    attached to the testing framework saves information about executed tests to XML files. We already
                     provide adapters for popular Java, PHP, Ruby, Python, Scala and C# test frameworks.
                 </p>
 
                 <p>
-                    During <strong>report generation</strong> (second step) XML files are transformed to HTML report.
-                    This can be done with command line tool, plugin for CI or build tool. See <a href="https://github.com/allure-examples">examples</a> and <a href="https://github.com/allure-framework/allure-core/wiki">documentation</a> for more details.
+                    During <strong>report generation</strong> (second step), the XML files are transformed to a HTML report.
+                    This can be done with a command line tool, a plugin for CI or a build tool. See <a href="https://github.com/allure-examples">examples</a> and <a href="https://github.com/allure-framework/allure-core/wiki">documentation</a> for more details.
                 </p>
 
-                <h2>How it looks like</h2>
-                <p><strong>Overview</strong> page shows overall test execution statistics with a list of test parameters. Right section contains top defects grouped by defect message.</p>
+                <h2>How it looks</h2>
+                <p>The <strong>overview</strong> page shows overall test execution statistics with a list of test parameters. the right section contains top defects grouped by defect message.</p>
                 <img src="img/overview.png" alt="Overview Page" class="img-thumbnail" />
-                <p><strong>Defects</strong> page gives detailed list of defects revealed during test execution. We distinguish product defects which correspond to failed tests and test defects - correspond to broken tests.</p>
+                <p>The <strong>defects</strong> page gives a detailed list of defects revealed during test execution. We distinguish product defects which correspond to failed tests and test defects that correspond to broken tests.</p>
                 <img src="img/defects.png" alt="Defects Page" class="img-thumbnail" />
-                <p><strong>xUnit</strong> page shows statistics in terms of <a href="http://en.wikipedia.org/wiki/XUnit">xUnit</a>. You can view test statistics for each test suite and detailed information about every test case.</p>
+                <p>The <strong>xUnit</strong> page shows statistics in terms of <a href="http://en.wikipedia.org/wiki/XUnit">xUnit</a>. You can view test statistics for each test suite and detailed information about every test case.</p>
                 <img src="img/xunit.png" alt="xUnit Page" class="img-thumbnail" />
-                <p><strong>Behaviors</strong> page groups test data in terms of <a href="http://en.wikipedia.org/wiki/Behavior-driven_development">BDD</a>. You can easily view which features and stories have problems.</p>
+                <p>The <strong>behaviors</strong> page groups test data in terms of <a href="http://en.wikipedia.org/wiki/Behavior-driven_development">BDD</a>. You can easily view which features and stories have problems.</p>
                 <img src="img/bdd.png" alt="Behaviors Page" class="img-thumbnail" />
                 <p><strong>Graphs</strong> help you to visually estimate test results.</p>
                 <img src="img/graph.png" alt="Graph Page" class="img-thumbnail" />
-                <p><strong>Timeline</strong> page shows in which moment of time every test case was executed and how long it was running.</p>
+                <p>The<strong>timeline</strong> page shows at which point in time each test case began execution, and how long it was running.</p>
                 <img src="img/timeline.png" alt="Timeline Page" class="img-thumbnail" />
                 
                 <hr/>
