--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             </div>
         </li>
         <li class="b-vert__item">
-            <a class="b-vert__title" href="https://ci.qameta.io/job/allure1/job/master/Allure_Report/index.html">
+            <a class="b-vert__title" href="https://ci.qameta.io/job/allure2/job/master/Demo_Report/index.html">
                 <div class="b-vert__icon octicon octicon-file-code"></div>
                 Demo Report
             </a>
         </li>
         <li class="b-vert__item">
-            <a class="b-vert__title" href="https://github.com/allure-framework/allure1/wiki">
+            <a class="b-vert__title" href="https://docs.qameta.io/allure/latest/">
                 <div class="b-vert__icon octicon octicon-repo"></div>
                 Documentation
             </a>
@@ -90,13 +90,13 @@
             </a>
         </li>
         <li class="b-vert__item">
-            <a class="b-vert__title" href="https://github.com/allure-framework/allure1">
+            <a class="b-vert__title" href="https://github.com/allure-framework/allure2">
                 <div class="b-vert__icon octicon octicon-mark-github"></div>
                 Source Code
             </a>
         </li>
         <li class="b-vert__item">
-            <a class="b-vert__title" href="https://github.com/allure-framework/allure1/releases">
+            <a class="b-vert__title" href="https://github.com/allure-framework/allure2/releases">
                 <div class="b-vert__icon octicon octicon-tag"></div>
                 Release Notes
             </a>
