--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@
         </li>
     </ul>
     <div class="nav navbar-text navbar-right release release-latest">
-        Latest release: 
-        <a href="https://github.com/allure-framework/allure2/releases" class="release-link">Loading...</a>
-    </div>
-    <div class="nav navbar-text navbar-right release-stable release hidden">
-        Stable release:
-        <a href="https://github.com/allure-framework/allure2/releases" class="release-link">Loading...</a>
+        <a href="https://github.com/allure-framework/allure2/releases" class="release-link">Releases</a>
     </div>
 </header>
 <div class="dashboard">
