--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </li>
     </ul>
     <div class="nav navbar-text navbar-right release release-latest">
-        <a href="https://github.com/allure-framework/allure2/releases" class="release-link">Releases</a>
+        <a href="https://github.com/allure-framework/allure2/releases" class="release-link">Download</a>
     </div>
 </header>
 <div class="dashboard">
