--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </li>
         <li class="b-vert__item">
-            <a class="b-vert__title" href="https://ci.qameta.io/job/allure2/job/master/Demo_Report/index.html">
+            <a class="b-vert__title" href="http://demo.qameta.io/allure/latest/">
                 <div class="b-vert__icon octicon octicon-file-code"></div>
                 Demo Report
             </a>
