--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <p class="allure-description text-justify">
                         There are lots of cool testing frameworks for different programming languages. Unfortunately only
                         a few of them can provide good representation of test execution output.
-                        The <a href="http://company.yandex.com/">Yandex</a> testing team is working on
-                        <a href="https://github.com/allure-framework/allure1">Allure</a> - an open-source
+                        The <b>Qameta Software</b> testing team is working on
+                        <a href="https://github.com/allure-framework/allure2">Allure</a> - an open-source
                         framework designed to create test execution reports that are clear to everyone in the team.
                     </p>
                 </div>
